--- a/task6/components/hero.html
+++ b/task6/components/hero.html
@@ -1,5 +1,5 @@
 <section
-  class="relative overflow-hidden pt-32 pb-52 text-white bg-gradient-to-br from-[#8428B0] via-[#7A1FA2] to-[#651986]"
+  class="relative overflow-visible pt-32 pb-52 text-white bg-gradient-to-br from-[#8428B0] via-[#7A1FA2] to-[#651986]"
 >
   <div
     class="absolute -left-40 -top-40 w-[600px] h-[600px] bg-[#7B1FA2] rounded-full blur-[100px] opacity-50"
@@ -67,28 +67,28 @@
     </div>
   </div>
 
-  <svg class="absolute bottom-32 w-full opacity-30" viewBox="0 0 1440 320">
-    <path
-      fill="#A864D4"
-      fill-opacity="0.4"
-      d="M0,256L48,250.7C96,245,192,235,288,213.3C384,192,480,160,576,170.7C672,181,768,235,864,250.7C960,267,1056,245,1152,229.3C1248,213,1344,203,1392,197.3L1440,192V320H0Z"
-    ></path>
-  </svg>
+  <div class="absolute bottom-0 left-0 w-full overflow-visible leading-[0]">
+    <svg
+      class="block w-full h-[450px]"
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 1440 400"
+      preserveAspectRatio="none"
+    >
+      <path
+        fill="#9C27B0"
+        fill-opacity="0.4"
+        d="M0,220 C360,300 1080,120 1440,260 L1440,400 L0,400 Z"
+      ></path>
 
-  <div
-    class="absolute -bottom-32 left-0 right-0 h-48 bg-white"
-    style="clip-path: ellipse(80% 50% at 50% 100%)"
-  ></div>
+      <path
+        fill="#651986"
+        fill-opacity="1"
+        d="M0,260 C480,380 960,140 1440,300 L1440,400 L0,400 Z"
+      ></path>
+    </svg>
 
-  %
+    <div
+      class="absolute bottom-0 left-0 right-0 h-48 bg-gradient-to-t from-white to-transparent"
+    ></div>
+  </div>
 </section>
-
-<!-- <svg
-    class="absolute top-[50px] right-30 h-[1000px] w-auto opacity-10 z-0"
-    viewBox="0 0 600 600"
-  >
-    <path
-      fill="#FFB84C"
-      d="M300,40C380,40,450,80,480,150C510,220,490,310,440,370C390,430,320,470,250,460C180,450,110,400,90,320C70,240,110,150,170,100C230,60,260,40,300,40Z"
-    />
-  </svg> -->
