--- a/task6/components/hero.html
+++ b/task6/components/hero.html
@@ -1,5 +1,5 @@
 <section
-  class="relative overflow-visible pt-32 pb-52 text-white bg-gradient-to-br from-[#8428B0] via-[#7A1FA2] to-[#651986]"
+  class="relative overflow-hidden pt-32 pb-52 text-white bg-gradient-to-br from-[#8428B0] via-[#7A1FA2] to-[#651986]"
 >
   <div
     class="absolute -left-40 -top-40 w-[600px] h-[600px] bg-[#7B1FA2] rounded-full blur-[100px] opacity-50"
@@ -67,7 +67,7 @@
     </div>
   </div>
 
-  <div class="absolute bottom-0 left-0 w-full overflow-visible leading-[0]">
+  <div class="absolute bottom-0 left-0 w-full overflow-hidden leading-[0]">
     <svg
       class="block w-full h-[450px]"
       xmlns="http://www.w3.org/2000/svg"
