--- a/task6/components/brand.html
+++ b/task6/components/brand.html
@@ -1,35 +1,38 @@
-<section class="bg-white py-20 relative overflow-hidden">
+<section class="bg-white pt-0 pb-20 relative overflow-hidden">
+  <!-- Soft blur background -->
   <div
-    class="absolute left-1/2 -top-32 w-[600px] h-[400px] bg-[#E8D4F8] opacity-40 blur-[120px] rounded-full -translate-x-1/2"
+    class="absolute left-1/2 top-10 w-[600px] h-[250px] bg-[#E8D4F8] opacity-30 blur-[100px] rounded-full -translate-x-1/2 z-0"
   ></div>
 
+  <!-- Logos Row -->
   <div
-    class="flex flex-wrap justify-center gap-8 sm:gap-10 md:gap-14 opacity-40 mb-14 px-4"
+    class="flex flex-wrap justify-center gap-12 sm:gap-14 md:gap-20 lg:gap-24 opacity-40 mb-16 px-2 sm:px-6 md:px-10 lg:px-20"
   >
     <img
       src="https://img.freepik.com/premium-vector/hand-logo-images_600494-1271.jpg"
-      class="w-14 sm:w-16 md:w-20 lg:w-24"
+      class="w-16 sm:w-20 md:w-24 lg:w-28"
     />
     <img
       src="https://img.freepik.com/premium-vector/hand-logo-images_600494-1271.jpg"
-      class="w-14 sm:w-16 md:w-20 lg:w-24"
+      class="w-16 sm:w-20 md:w-24 lg:w-28"
     />
     <img
       src="https://img.freepik.com/premium-vector/hand-logo-images_600494-1271.jpg"
-      class="w-14 sm:w-16 md:w-20 lg:w-24"
+      class="w-16 sm:w-20 md:w-24 lg:w-28"
     />
     <img
       src="https://img.freepik.com/premium-vector/hand-logo-images_600494-1271.jpg"
-      class="w-14 sm:w-16 md:w-20 lg:w-24"
+      class="w-16 sm:w-20 md:w-24 lg:w-28"
     />
     <img
       src="https://img.freepik.com/premium-vector/hand-logo-images_600494-1271.jpg"
-      class="w-14 sm:w-16 md:w-20 lg:w-24"
+      class="w-16 sm:w-20 md:w-24 lg:w-28"
     />
   </div>
 
+  <!-- Stats Row -->
   <div
-    class="flex flex-col sm:flex-row justify-center items-center gap-12 sm:gap-20 md:gap-28 text-center text-gray-700 px-4"
+    class="max-w-7xl mx-auto flex flex-col sm:flex-row justify-center items-center gap-14 sm:gap-24 md:gap-32 text-center text-gray-700 px-2 sm:px-6 md:px-10 lg:px-20"
   >
     <div>
       <h3 class="text-2xl sm:text-3xl md:text-4xl font-bold text-[#8E24AA]">
