--- a/task6/components/featuresplit.html
+++ b/task6/components/featuresplit.html
@@ -5,10 +5,12 @@
   ></div>
 
   <div
-    class="absolute top-6 sm:top-10 left-6 sm:left-8 text-[#FF9800] text-2xl sm:text-3xl md:text-4xl font-extrabold"
+    class="absolute left-32 sm:left-8 text-[#FF9800] text-2xl sm:text-3xl md:text-4xl font-extrabold"
+    style="top: 200px"
   >
     +
   </div>
+
   <div
     class="absolute bottom-16 left-8 sm:left-12 text-[#9C27B0] text-xl sm:text-2xl md:text-3xl font-bold"
   >
@@ -21,7 +23,9 @@
   <div
     class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12 items-center px-6 sm:px-8 md:px-12"
   >
-    <div class="relative flex justify-center md:justify-start mb-8 md:mb-0">
+    <div
+      class="relative flex justify-center md:justify-start mb-8 md:mb-0 md:-ml-32"
+    >
       <img
         src="2.png"
         class="w-[260px] sm:w-[340px] md:w-[460px] lg:w-[500px] rounded-xl drop-shadow-[0_25px_45px_rgba(0,0,0,0.15)]"
