--- a/task6/components/all.html
+++ b/task6/components/all.html
@@ -1,11 +1,14 @@
 <section class="relative overflow-hidden bg-[#F5E9FF] py-16">
-  <svg class="absolute top-0 left-0 w-full" viewBox="0 0 1440 320">
+  <svg
+    class="absolute top-0 left-0 w-full"
+    viewBox="0 0 1440 320"
+    preserveAspectRatio="none"
+  >
     <path
       fill="#ffffff"
-      d="M0,160L40,144C80,128,160,96,240,90C320,85,400,107,480,128C560,149,640,171,720,160C800,149,880,107,960,90C1040,75,1120,85,1200,106.7C1280,128,1360,160,1400,176L1440,192V0H0Z"
+      d="M0,50 C480,0 760,450 1440,260 L1440,0 L0,0 Z"
     ></path>
   </svg>
-
   <div class="relative z-10 max-w-7xl mx-auto px-6 md:px-12 space-y-12">
     <div
       class="relative grid grid-cols-1 md:grid-cols-2 gap-8 items-center max-w-7xl mx-auto px-3 md:px-8 py-10 md:py-6 overflow-hidden"
@@ -104,9 +107,7 @@
       </div>
     </div>
 
-    <div
-      class="relative text-center bg-[#F5E9FF] py-4 md:py-6 px-6 overflow-hidden"
-    >
+    <div class="relative text-center py-4 md:py-6 px-6 overflow-hidden">
       <span
         class="absolute top-6 left-10 text-[#FF9800] text-2xl font-extrabold select-none"
         >+</span
@@ -156,14 +157,14 @@
   </div>
 
   <svg
-    class="absolute bottom-0 left-0 w-full"
-    viewBox="0 0 1440 200"
+    class="absolute bottom-0 left-0 w-full text-white"
+    viewBox="0 0 1440 320"
     preserveAspectRatio="none"
+    xmlns="http://www.w3.org/2000/svg"
   >
     <path
-      fill="#ffffff"
-      d="M0,160 C300,100 600,200 900,160 C1200,120 1440,180 1440,180 L1440,200
-      L0,200 Z"
+      fill="currentColor"
+      d="M0,260 C240,160 520,80 740,170 C960,260 1240,220 1440,140 L1440,320 L0,320 Z"
     ></path>
   </svg>
 </section>
