--- a/task6/components/hero.html
+++ b/task6/components/hero.html
@@ -1,5 +1,5 @@
 <section
-  class="relative overflow-hidden pt-20 pb-36 text-white bg-gradient-to-br from-[#8428B0] via-[#7A1FA2] to-[#651986]"
+  class="relative overflow-hidden pt-20 pb-36 text-white bg-gradient-to-br from-[#8428B0] via-[#7A1FA2]"
 >
   <div
     class="absolute -left-40 -top-40 w-[700px] h-[700px] bg-[#7B1FA2] rounded-full blur-[120px] opacity-40"
@@ -17,13 +17,13 @@
       ></div>
 
       <h1
-        class="text-4xl sm:text-5xl lg:text-6xl font-extrabold leading-tight drop-shadow"
+        class="text-3xl sm:text-4xl lg:text-5xl font-extrabold leading-tight drop-shadow"
       >
         Sed Imperdiet Enim Ii <br />
-        Vitae <span class="text-[#8BC34A]">Viverra Justo</span>
+        Vitae <span class="text-[#ffffff]">Viverra Justo</span>
       </h1>
       <p
-        class="text-gray-200 text-base sm:text-lg leading-relaxed mx-auto md:mx-0 max-w-md"
+        class="text-gray-200 text-base sm:text-md leading-relaxed mx-auto md:mx-0 max-w-md"
       >
         Nam sollicitudin nunc, cursus eros vulputate sed. Vestibulum sit amet.
       </p>
@@ -68,11 +68,11 @@
     >
       <path
         fill="#9C27B0"
-        fill-opacity="0.4"
+        fill-opacity="0.6"
         d="M0,192L60,170.7C120,149,240,107,360,122.7C480,139,600,213,720,213.3C840,213,960,139,1080,112C1200,85,1320,107,1380,122.7L1440,139V320H0Z"
       ></path>
       <path
-        fill="#651986"
+        fill="#9C27B0"
         fill-opacity="1"
         d="M0,224L48,208C96,192,192,160,288,160C384,160,480,192,576,186.7C672,181,768,139,864,133.3C960,128,1056,160,1152,181.3C1248,203,1344,213,1392,218.7L1440,224V320H0Z"
       ></path>
