--- a/task4/components/nav.html
+++ b/task4/components/nav.html
@@ -7,21 +7,23 @@
   </div>
 
   <div class="nav-right">
-    <div class="nav-item"><i class="icon"></i> Orders</div>
-    <div class="nav-item"><i class="icon"></i></i> Favourites</div>
-    <div class="nav-item cart"><i class="icon"></i> Cart</div>
-    <div class="hamburger">&#9776;</div>
+    <div class="nav-links">
+      <div class="nav-item">Orders</div>
+      <div class="nav-item">Favourites</div>
+      <div class="nav-item cart">Cart</div>
+    </div>
 
+    <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
     <img class="avatar" src="https://i.pravatar.cc/40?img=3" />
   </div>
-</nav>
-<div class="mobile-menu">
-  <div class="nav-item">Orders</div>
-  <div class="nav-item">Favourites</div>
-  <div class="nav-item">Cart</div>
-</div>
 
-<!-- CATEGORY PILLS -->
+  <div class="dropdown-menu" id="dropdown-menu">
+    <div class="nav-item">Orders</div>
+    <div class="nav-item">Favourites</div>
+    <div class="nav-item cart">Cart</div>
+  </div>
+</nav>
+
 <div class="categories">
   <button class="pill">All Categories</button>
   <button class="pill">Deals</button>
